syntax = "proto3";

service RaftService {
    rpc AppendEntries(AERequest) returns (AEResponse) {}
    rpc RequestVote(RVRequest) returns (RVResponse) {}
}

message Entry {
    int32 index = 1;
    int32 term = 2;
    string command = 3;
}

message AERequest {
    int32 term = 1;
    string leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated Entry entries = 5;
    int32 leaderCommit = 6;
}

message AEResponse {
    int32 term = 1;
    bool success = 2;
}

message RVRequest {
    int32 term = 1;
    string candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RVResponse {
    int32 term = 1;
    bool voteGranted = 2;
}
